@@ -1,3 +1,10 @@
+2005-11-01  Alexander Larsson  <alexl@redhat.com>
+
+	* admin-tool/lockdownwindow.py:
+	* lib/sources/gconfsource.py:
+	Update to use the latest pessulus lockdownapplier, but don't
+	actually use pessulus yet.
+
 2005-10-28  Alexander Larsson  <alexl@redhat.com>
 
 	* admin-tool/lockdownwindow.py:
